Updated server name

--- a/nginx/sites-enabled/default.conf
+++ b/nginx/sites-enabled/default.conf
@@ -1,7 +1,7 @@
 server {
 
     listen 80;
-    server_name alumnimentor.org www.alumnimentor.org;
+    server_name 34.134.26.9;
     charset utf-8;
 
     location / {
